--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -268,7 +268,7 @@ Measures can then be applied outside of the endemic region, and directed towards
 For ech problem and model, we found the best performing learner with a cross validation procedure which searched over an extensive grid of hyperparameters.
 In all cases, the hyperparameter configuration with highest cross-validated $ROC AUC$ was selected as the \textit{best-fit}.
 %Due to time constraints limited by the use of full cross validation fitting procedures, not all models were run for all of the tasks.
-The following table shows the best-fit classifier's performance across three scores on the test set \mathcal{T_s}: $Accuracy$, $F1$ and $ROC AUC$.
+The following table shows the best-fit classifier's performance across three scores on the test set $\mathcal{T_s}$: $Accuracy$, $F1$ and $ROC AUC$.
 
 \todo{Bigger, better and more esthetically pleasing table is commented in the code below this one. Yet the commented table does not fit in a whole page and spawns compilation errors. This needs to be fixed.}
 
