minor todos in tex to remember

--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -651,6 +651,8 @@ More information on this can be found in \textcite{mason-rocAucRelationship}.}
 
 The following figures are example ROC curves for two of the problems defined from our dataset.
 
+\todo{Erase title from figure and move info to caption.}
+
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=1\columnwidth]{figures/figure-lowROCAUC/figure-lowROCAUC_original}
@@ -671,6 +673,7 @@ In this case the result is that the algorithm has a considerable better score by
 No data transformation has been applied to the set between runs.
 The difference in the two scores is notable and corresponds entirely to the problem chosen.
 
+\todo{Erase title from figure and move info to caption.}
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=1.2\columnwidth]{figures/figure-highROCAUC/figure-highROCAUC}
