--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -270,8 +270,6 @@ In all cases, the hyperparameter configuration with highest cross-validated $ROC
 %Due to time constraints limited by the use of full cross validation fitting procedures, not all models were run for all of the tasks.
 The following table shows the best-fit classifier's performance across three scores on the test set $\mathcal{T_s}$: $Accuracy$, $F1$ and $ROC AUC$.
 
-\todo{Bigger, better and more esthetically pleasing table is commented in the code below this one. Yet the commented table does not fit in a whole page and spawns compilation errors. This needs to be fixed.}
-
 \begin{table}
 \caption{Master resutls table comparing results for all of the classifiers run in this work.
 For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
@@ -291,6 +289,8 @@ For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test
     \end{tabular*}
 \end{table}
 
+
+\todo{Bigger, better and more esthetically pleasing table is commented in the code below this one. Yet the commented table does not fit in a whole page and spawns compilation errors. This needs to be fixed.}
 
 
 % \begin{landscape}% Landscape page
@@ -395,10 +395,8 @@ For the purpose of continuing this line of work, the following is a list of poss
 \end{description}
 
 
-
-
 \todo{Erase this section}
-\section{Random notes to add to results}
+\section{Plan / Random notes to add to results chapter}
 
 \begin{description}
     \item confirmation of decision tree overfitting on model complexity. Random Forests improving on this. Gradient Boosting better in bias with a slight incrase in overfit.
